--- a/Gym Website by Trex-96/css/styles.css
+++ b/Gym Website by Trex-96/css/styles.css
@@ -59,6 +59,7 @@ button.normal {
     border: none;
     outline:none;
     transition: 0.2s ease;
+    text-decoration: none;
 }
 
 button.white {
@@ -71,6 +72,7 @@ button.white {
     border: 1px solid #fff;
     outline:none;
     transition: 0.2s ease;
+
 }
 
 body{
@@ -115,6 +117,7 @@ body{
     background-repeat: no-repeat;
     cursor: pointer;
     text-align: center;
+    text-decoration: none;
     font-weight: 700;
     font-size: 1.5rem;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
